Fix the styling of the lists, so that there isn't as large a gap at the top, and add a newline at the bottom of the list to add space to it.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -15,3 +15,7 @@
 .item .item-content {
 	background-color: transparent !important;
 }
+
+.list-inset {
+  margin-top: 0px; !important;
+}
